# Password-Generator-Bot-Rust

./: Cargo.toml  README.MD
.github/workflows/: release.yml
src/: main.rs
