[package]
name = "password-generator-bot"
version = "0.1.0"
authors = ["HirbodBehnam <chrome.hiri.angry@gmail.com>"]
edition = "2018"

[dependencies]
teloxide = { version = "0.4", features = ["auto-send", "macros"] }
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.6.1", features = ["rt-multi-thread", "macros"] }

getrandom = "0.2"
lazy_static = "1.4.0"